feat : #198 학생회 채팅 내역 조회 스크롤 모두 지원